--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,7 +13,7 @@ on:
       - ".github/actions/setup-python/**"
       - ".github/workflows/codecov.yml"
       - "pyproject.toml"
-      - "poetry.lock"
+      - "uv.lock"
 
 jobs:
   test:
@@ -41,12 +41,11 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
           env-dir: ./envs/${{ matrix.env }}
-          no-root: true
 
       - name: Run Pytest
         run: |
           cd ./envs/${{ matrix.env }}
-          poetry run bash "../../scripts/run-tests.sh"
+          uv run ../../scripts/run-tests.sh
 
       - name: Upload test results
         uses: codecov/test-results-action@v1
