--- a/.github/workflows/ruff.yml
+++ b/.github/workflows/ruff.yml
@@ -13,7 +13,7 @@ on:
       - ".github/actions/setup-python/**"
       - ".github/workflows/ruff.yml"
       - "pyproject.toml"
-      - "poetry.lock"
+      - "uv.lock"
 
 jobs:
   ruff:
