--- a/.github/actions/build-api-doc/action.yml
+++ b/.github/actions/build-api-doc/action.yml
@@ -5,10 +5,5 @@ runs:
   using: "composite"
   steps:
     - run: |
-        poetry run nb-autodoc nonebot \
-          -s nonebot.plugins \
-          -u nonebot.internal \
-          -u nonebot.internal.*
-        cp -r ./build/nonebot/* ./website/docs/api/
-        yarn prettier
+        uv run --no-sync bash ./scripts/build-api-docs.sh
       shell: bash
