--- a/.github/actions/setup-python/action.yml
+++ b/.github/actions/setup-python/action.yml
@@ -5,36 +5,20 @@ inputs:
   python-version:
     description: Python version
     required: false
-    default: "3.10"
-  env-dir:
-    description: Environment directory
+    default: "3.12"
+  env-group:
+    description: Environment group
     required: false
-    default: "."
-  no-root:
-    description: Do not install package in the environment
-    required: false
-    default: "false"
+    default: "pydantic-v2"
 
 runs:
   using: "composite"
   steps:
-    - name: Install poetry
-      run: pipx install poetry
-      shell: bash
-
-    - uses: actions/setup-python@v5
+    - uses: astral-sh/setup-uv@v6
       with:
         python-version: ${{ inputs.python-version }}
-        cache: "poetry"
-        cache-dependency-path: |
-          ./poetry.lock
-          ${{ inputs.env-dir }}/poetry.lock
+        cache-suffix: ${{ inputs.env-group }}
 
     - run: |
-        cd ${{ inputs.env-dir }}
-        if [ "${{ inputs.no-root }}" = "true" ]; then
-          poetry install --all-extras --no-root
-        else
-          poetry install --all-extras
-        fi
+        uv sync --all-extras --locked --group ${{ inputs.env-group }}
       shell: bash
