--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -13,7 +13,7 @@ on:
       - ".github/actions/setup-python/**"
       - ".github/workflows/codecov.yml"
       - "pyproject.toml"
-      - "poetry.lock"
+      - "uv.lock"
 
 jobs:
   test:
@@ -40,13 +40,11 @@ jobs:
         uses: ./.github/actions/setup-python
         with:
           python-version: ${{ matrix.python-version }}
-          env-dir: ./envs/${{ matrix.env }}
-          no-root: true
+          env-group: ${{ matrix.env }}
 
       - name: Run Pytest
         run: |
-          cd ./envs/${{ matrix.env }}
-          poetry run bash "../../scripts/run-tests.sh"
+          uv run --no-sync bash ./scripts/run-tests.sh
 
       - name: Upload test results
         uses: codecov/test-results-action@v1
