:beers: publish plugin AWS Manager (#3549)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9398,4 +9398,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_awsmgmt",
+    "project_link": "nonebot-plugin-awsmgmt",
+    "author_id": 20412597,
+    "tags": [],
+    "is_official": false
+  },
 ]
