--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,7 @@ dependencies = [
   "pygtrie >=2.4.1, <3.0.0",
   "exceptiongroup >=1.2.2, <2.0.0",
   "python-dotenv >=0.21.0, <2.0.0",
-  "typing-extensions >=4.4.0, <5.0.0",
+  "typing-extensions >=4.6.0, <5.0.0",
   "tomli >=2.0.1, <3.0.0; python_version < '3.11'",
   "pydantic >=1.10.0, <3.0.0, !=2.5.0, !=2.5.1, !=2.10.0, !=2.10.1",
 ]
@@ -129,6 +129,9 @@ pythonVersion = "3.9"
 pythonPlatform = "All"
 defineConstant = { PYDANTIC_V2 = true }
 executionEnvironments = [
+  { root = "./tests/python_3_12", pythonVersion = "3.12", extraPaths = [
+    "./",
+  ] },
   { root = "./tests", extraPaths = [
     "./",
   ] },
