:beers: publish plugin EconomyValue (#3565)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9444,4 +9444,24 @@
     "tags": [],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_value",
+    "project_link": "nonebot-plugin-value",
+    "author_id": 67693593,
+    "tags": [
+      {
+        "label": "value",
+        "color": "#d10a0a"
+      },
+      {
+        "label": "货币",
+        "color": "#3c0eff"
+      },
+      {
+        "label": "经济",
+        "color": "#1b9f1d"
+      }
+    ],
+    "is_official": false
+  },
 ]
