--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9541,4 +9541,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_ImageLibrary",
+    "project_link": "nonebot-plugin-imagelibrary",
+    "author_id": 126797731,
+    "tags": [
+      {
+        "label": "image",
+        "color": "#7629c4"
+      }
+    ],
+    "is_official": false
+  },
 ]
