--- a/.github/actions/setup-node/action.yml
+++ b/.github/actions/setup-node/action.yml
@@ -6,7 +6,7 @@ runs:
   steps:
     - uses: actions/setup-node@v5
       with:
-        node-version: lts/latest
+        node-version: lts/*
         cache: yarn
 
     - run: yarn install --frozen-lockfile
