:beers: publish plugin 谁是卧底小游戏 (#3628)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9660,4 +9660,20 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_who_is_spy",
+    "project_link": "nonebot-plugin-who-is-spy",
+    "author_id": 144591143,
+    "tags": [
+      {
+        "label": "game",
+        "color": "#ea5252"
+      },
+      {
+        "label": "游戏",
+        "color": "#ea52cd"
+      }
+    ],
+    "is_official": false
+  },
 ]
