--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9720,4 +9720,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_llm_extension",
+    "project_link": "nonebot-plugin-llm-extension",
+    "author_id": 110453675,
+    "tags": [
+      {
+        "label": "🇦🇮",
+        "color": "#f0f0f0"
+      }
+    ],
+    "is_official": false
+  },
 ]
