--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9752,4 +9752,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_mhcodes",
+    "project_link": "nonebot-plugin-mhcodes",
+    "author_id": 99017826,
+    "tags": [
+      {
+        "label": "怪物猎人",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
