:beers: 修正 plugin-htmlkit 的属性

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -9750,7 +9750,7 @@
         "color": "#199579"
       }
     ],
-    "is_official": false
+    "is_official": true
   },
   {
     "module_name": "nonebot_plugin_mhcodes",
