--- a/tests/.env.example
+++ b/tests/.env.example
@@ -10,6 +10,7 @@ NESTED__C__C=3
 NESTED__COMPLEX=[1, 2, 3]
 NESTED_INNER__A=1
 NESTED_INNER__B=2
+ALIAS_SIMPLE=aliased_simple
 OTHER_SIMPLE=simple
 OTHER_NESTED={"a": 1}
 OTHER_NESTED__B=2
