--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10006,4 +10006,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_anan_say",
+    "project_link": "nonebot-plugin-anan-say",
+    "author_id": 122149478,
+    "tags": [
+      {
+        "label": "魔女审判",
+        "color": "#b10ba0"
+      }
+    ],
+    "is_official": false
+  },
 ]
