--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10082,4 +10082,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_instagram",
+    "project_link": "nonebot-plugin-instagram",
+    "author_id": 49683326,
+    "tags": [
+      {
+        "label": "instagram",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
