:beers: publish plugin 群消息中继 (#3803)

--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10212,4 +10212,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_group_relay",
+    "project_link": "nonebot-plugin-group-relay",
+    "author_id": 86188856,
+    "tags": [
+      {
+        "label": "func",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
