--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10320,4 +10320,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_dice_helper",
+    "project_link": "nonebot-plugin-dice-helper",
+    "author_id": 30589360,
+    "tags": [],
+    "is_official": false
+  },
 ]
