--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10339,4 +10339,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_BitTorrents",
+    "project_link": "nonebot-plugin-bittorrents",
+    "author_id": 98020024,
+    "tags": [
+      {
+        "label": "func",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
