--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,24 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_cardimg",
+    "project_link": "nonebot-plugin-cardimg",
+    "author_id": 99666950,
+    "tags": [
+      {
+        "label": "模板渲染",
+        "color": "#dec7ef"
+      },
+      {
+        "label": "图片生成",
+        "color": "#f8d8cf"
+      },
+      {
+        "label": "HTML渲染",
+        "color": "#c2dff2"
+      }
+    ],
+    "is_official": false
+  },
 ]
