--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,24 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_icey",
+    "project_link": "nonebot-plugin-icey",
+    "author_id": 38542005,
+    "tags": [
+      {
+        "label": "群管理",
+        "color": "#354ed4"
+      },
+      {
+        "label": "模块化",
+        "color": "#d435c3"
+      },
+      {
+        "label": "持久化",
+        "color": "#d48b35"
+      }
+    ],
+    "is_official": false
+  },
 ]
