--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,11 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_aichat",
+    "project_link": "nonebot-plugin-aichatbyluxis",
+    "author_id": 115719767,
+    "tags": [],
+    "is_official": false
+  },
 ]
