--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_shiro_signin",
+    "project_link": "nonebot-plugin-shiro-signin",
+    "author_id": 114895516,
+    "tags": [
+      {
+        "label": "签到",
+        "color": "#ff4031"
+      }
+    ],
+    "is_official": false
+  },
 ]
