--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_maimaimonitor",
+    "project_link": "nonebot-plugin-maimaimonitor",
+    "author_id": 141206905,
+    "tags": [
+      {
+        "label": "maimai",
+        "color": "#39c5bb"
+      }
+    ],
+    "is_official": false
+  },
 ]
