--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,16 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_nodejsphira",
+    "project_link": "nonebot-plugin-nodejsphira",
+    "author_id": 75435667,
+    "tags": [
+      {
+        "label": "server",
+        "color": "#ea5252"
+      }
+    ],
+    "is_official": false
+  },
 ]
