--- a/assets/plugins.json5
+++ b/assets/plugins.json5
@@ -10370,4 +10370,24 @@
     ],
     "is_official": false
   },
+  {
+    "module_name": "nonebot_plugin_mute_cat",
+    "project_link": "nonebot-plugin-mute-cat",
+    "author_id": 199351962,
+    "tags": [
+      {
+        "label": "工具",
+        "color": "#ea5252"
+      },
+      {
+        "label": "群管理",
+        "color": "#52eacf"
+      },
+      {
+        "label": "禁言",
+        "color": "#830daa"
+      }
+    ],
+    "is_official": false
+  },
 ]
